--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li> 
@@ -65,10 +65,10 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.blade.php">Login</a>
+                <a class="nav-link" href="../resources/views/auth/login.blade.php">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Register</a>
+                <a class="nav-link" href="../resources/views/auth/register.blade.php">Register</a>
               </li>
             </ul>
           </div>
